test/classes/figueroa/DestructorSubclassing2.good
DestructorSubclassing2.chpl:11: error: only single inheritance is supported
